--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "uwt.dog"
-        minSdkVersion 23
+        applicationId "com.example.cqngu.doggie"
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
