--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
 
 }
 
+repositories {
+    jcenter()
+}
+
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -33,4 +38,6 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.firebase:firebase-client-android:2.5.1+'
     compile project(':libs:opencv')
+    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    compile 'com.google.zxing:core:3.2.1'
 }
