--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cqngu.doggie" >
+    package="com.example.cqngu.doggie">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -17,11 +17,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +34,7 @@
             android:label="@string/title_activity_dog_list"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.cqngu.doggie.MainActivity" />
@@ -49,6 +49,7 @@
             android:label="@string/title_activity_dog_profile"
             android:parentActivityName=".ListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".QRActivity"></activity>
     </application>
 
 </manifest>
